tests/fixtures/negative/exceptions/NotImplementedDeclaration.kt
package exceptions

class Example {
    fun foo() {
        doWork()
    }

    private fun doWork() {
        println("working")
    }
}
